updating location of libs

--- a/PracticeProjects/VisionPractice/nbproject/project.properties
+++ b/PracticeProjects/VisionPractice/nbproject/project.properties
@@ -27,17 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/VisionPractice.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.javacpp.jar=/home/bert5/vision/javacv-bin/javacpp.jar
-file.reference.javacv-linux-x86_64.jar=/home/bert5/vision/javacv-bin/javacv-linux-x86_64.jar
-file.reference.javacv.jar=/home/bert5/vision_jars/javacv-bin/javacv.jar
-file.reference.opencv-2.4.8-linux-x86_64.jar=/home/bert5/vision_jars/javacv-cppjars/opencv-2.4.8-linux-x86_64.jar
+file.reference.javacpp.jar=../../libs/javacpp.jar
+file.reference.javacv-linux-x86_64.jar=../../libs/javacv-linux-x86_64.jar
+file.reference.javacv.jar=../../libs/javacv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javacpp.jar}:\
-    ${file.reference.javacv-linux-x86_64.jar}:\
     ${file.reference.javacv.jar}:\
-    ${file.reference.opencv-2.4.8-linux-x86_64.jar}
+    ${file.reference.javacv-linux-x86_64.jar}:\
+    ${file.reference.javacpp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
