--- a/PracticeProjects/BasicJava/JarodPath/nbproject/project.properties
+++ b/PracticeProjects/BasicJava/JarodPath/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JarodPath.jar
+dist.jar=${dist.dir}/JarodPyth.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jarodpath.JarodPath
+main.class=jarodpyth.JarodPyth
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
