fixed build.properties, added F310.class to main code

--- a/FRCProject/bert/build.properties
+++ b/FRCProject/bert/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
-package=org.usfirst.frc.team4750.robot
-robot.class=${package}.Robot
+package=robotCode
+robot.class=${package}.BERT
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
