--- a/BertIV/.classpath
+++ b/BertIV/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="var" path="networktables" sourcepath="networktables.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="C:/Users/Robotics/wpilib/java/current/lib/WPILib.jar"/>
+	<classpathentry kind="lib" path="/home/bert4/wpilib/java/current/lib/WPILib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
